# 3fast

./: .gitignore  MANIFEST.md  README.md  pyproject.toml
dev/: fasts.py
dev/apps/welcome/: api.py  models.py  pages.py
dev/apps/welcome/views/components/: incremental.py  welcome.py
dev/apps/welcome/views/pages/: template.py  welcome.py
dev/apps/welcome/views/styles/: welcome.py
dev/configs/: databases.py  server.py  settings.py
fasts/cli/: commands.py  utils.py
fasts/core/: lifespan.py  middlewares.py  register.py  render.py  router.py
fasts/core/orm/: register.py  tortoise_config.py
fasts/scaffold/app/: api.py
fasts/scaffold/original_project/apps/welcome/: api.py
