[tool.poetry]
name = "fasts"
version = "0.1.0"
description = "This is a web Python fullstack framework"
authors = ["Genese Lessa <genese.lessa@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
python-fasthtml = "^0.12.12"
python-dotenv = "^1.1.0"
typer = "^0.15.2"
tortoise-orm = "^0.24.2"
aerich = "^0.8.2"

[tool.poetry.scripts]
3fast = "fasts.cli.commands:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
